--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -146,11 +146,13 @@ li {
 .sidebar {
     display: flex;
     flex-direction: column;
+    position: absolute;
     background-color: #82c0cc;
     width: 400px;
     height: 670px;
     margin-left: 15px;
     margin-bottom: 10px;
+    margin-top: 200px;
 }
 
 .weather {
@@ -213,3 +215,121 @@ li {
     margin: 10px auto auto 35px;
 }
 
+.task-field {
+    font-family: "Wix Madefor Display", serif;
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    align-items: center;
+    justify-content: center;
+    margin-left: 900px;
+    margin-top: -500px;
+    color: #82c0cc;
+    height: auto;
+    position: relative;
+}
+
+.task-form {
+    display: flex;
+    margin-top: 20px;
+    width: 330px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: "Wix Madefor Display", serif;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+.task-heading {
+    font-family: "Wix Madefor Display", serif;
+    font-weight: 500;
+}
+
+.form-label{
+    padding-bottom: 7px;
+}
+
+.task-name {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.task-des {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.form-inputs input {
+    text-align: center;
+    width: 300px;
+    height: 27px;
+    border: 1px solid rgba(0,0,0,0);
+    border-radius: 12px;
+}
+
+.submit {
+    padding-bottom: 10px;
+    margin-top: 5px;
+}
+
+#submit-button {
+    width: 100%;
+    height: 35px;
+    border: 1px solid rgba(0,0,0,0);
+    border-radius: 12px;
+    cursor: pointer;
+    background-color: #fe9661;
+    font-weight: 600;
+    transition: 0.4s ease-in;
+}
+
+#submit-button:hover {
+    background-color: #ff5500;
+    color: white;
+    scale: 1.05;
+}
+
+.task-area {
+    display: flex;
+    flex-direction: column;
+    margin-top: 500px;
+    margin-left: -400px;
+}
+
+.task {
+    color: white;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 870px;
+}
+
+.task-list-items {
+	list-style: none;
+	padding: 0px;
+	display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 12px;
+    justify-content: flex-start;
+}
+
+.task-list-items li {
+    list-style: none;
+    display: block;
+    max-width: 222px;
+    margin-right: 12px;
+    margin-bottom: 20px;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid;
+    border-radius: 5px;
+	max-height: 200px;
+	overflow-y: auto;
+}
+
+.task a{
+    color: #f65200;
+    text-decoration: none;
+}
