--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -246,7 +246,7 @@ li {
     font-weight: 500;
 }
 
-.form-label{
+.form-label {
     padding-bottom: 7px;
 }
 
@@ -264,7 +264,7 @@ li {
     text-align: center;
     width: 300px;
     height: 27px;
-    border: 1px solid rgba(0,0,0,0);
+    border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 12px;
 }
 
@@ -276,7 +276,7 @@ li {
 #submit-button {
     width: 100%;
     height: 35px;
-    border: 1px solid rgba(0,0,0,0);
+    border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 12px;
     cursor: pointer;
     background-color: #fe9661;
@@ -306,9 +306,9 @@ li {
 }
 
 .task-list-items {
-	list-style: none;
-	padding: 0px;
-	display: flex;
+    list-style: none;
+    padding: 0px;
+    display: flex;
     flex-wrap: wrap;
     width: 100%;
     gap: 12px;
@@ -325,11 +325,11 @@ li {
     width: 100%;
     border: 1px solid;
     border-radius: 5px;
-	max-height: 200px;
-	overflow-y: auto;
+    max-height: 200px;
+    overflow-y: auto;
 }
 
-.task a{
+.task a {
     color: #f65200;
     text-decoration: none;
 }
