--- a/styles/login.css
+++ b/styles/login.css
@@ -173,11 +173,11 @@ li {
     padding-bottom: 5px;
 }
 
-.form-input input{
+.form-input input {
     text-align: center;
     width: 300px;
     height: 27px;
-    border: 1px solid rgba(0,0,0,0);
+    border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 12px;
 }
 
@@ -192,7 +192,7 @@ li {
 #login {
     width: 300px;
     height: 40px;
-    border: 1px solid rgba(0,0,0,0);
+    border: 1px solid rgba(0, 0, 0, 0);
     border-radius: 12px;
     cursor: pointer;
     background-color: #fe9661;
