--- a/styles/profile.css
+++ b/styles/profile.css
@@ -132,3 +132,87 @@ li {
         left: 0;
     }
 }
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    width: auto;
+    font-family: "Wix Madefor Display", serif;
+    color: #ff5500;
+    padding: 15px;
+    font-size: 25px;
+}
+
+.profile-form {
+    display: flex;
+    flex-direction: column;
+    padding: 48px;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+.form-inputs input {
+    text-align: center;
+    width: 300px;
+    height: 27px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 12px;
+}
+
+#Gender-input {
+    text-align: center;
+    width: 300px;
+    height: 27px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 12px;
+}
+
+.submit {
+    width: 300px;
+    height: 40px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 12px;
+    cursor: pointer;
+    background-color: #fe9661;
+    font-weight: 700;
+    transition: 0.4s ease-in;
+}
+
+.dob,
+.gender,
+.email,
+.name,
+.username {
+    padding-bottom: 15px;
+}
+
+.form-label {
+    padding-bottom: 5px;
+}
+
+.submit:hover {
+    background-color: #ff5500;
+    color: white;
+    scale: 1.05;
+}
+
+.forgot {
+    padding-top: 15px;
+}
+
+.forgot-pwd {
+    text-decoration: none;
+    font-size: 20px;
+    color: #fc7d3e;
+    transition: 0.4s ease-in;
+}
+
+.forgot-pwd:hover {
+    text-decoration: underline;
+    color: #f65200;
+}
